<resources>
    <string name="app_name">MyStudy</string>
    <!--  region Study List  -->
    <string name="notification">Notification</string>
    <string name="paging">Paging</string>
    <string name="github_repository">Github Repository</string>
    <string name="user_paging">User Paging</string>
    <string name="selection">RecyclerView Selection</string>
    <string name="diffutil">RecyclerView DiffUtil</string>
    <string name="custom_paging">Custom Paging</string>
    <string name="pass_bundle">Pass Activity/Fragment Bundle</string>
    <string name="savedstatehandle">SavedStateHandle</string>
    <string name="bottom_navigation">BottomNavigationView</string>
    <string name="bottom_nav_refresh">BottomNav Refresh</string>
    <string name="binding_leak">Binding Leak</string>
    <string name="navigation_deeplink">Navigation Deeplink</string>
    <!-- endregion -->
    <!--  region Bottom Navigation  -->
    <string name="jetpack">Jetpack</string>
    <string name="library">Library</string>
    <string name="custom">Custom</string>
    <string name="uiux">UI/UX</string>
    <!--  endregion  -->
    <string name="create_normal">Create Normal Notification</string>
    <string name="channel_normal">Normal</string>
    <string name="channel_normal_description">Normal Notification</string>
    <string name="create_group">Create Group Notification</string>
    <string name="channel_group">Group</string>
    <string name="channel_group_description">Group Notification</string>
    <string name="create_high">Create High Notification</string>
    <string name="channel_high">HIGH</string>
    <string name="channel_high_description">Importance High Notification</string>
    <string name="create_default">Create Default Notification</string>
    <string name="channel_default">DEFAULT</string>
    <string name="channel_default_description">Importance Default Notification</string>
    <string name="create_low">Create Low Notification</string>
    <string name="channel_low">LOW</string>
    <string name="channel_low_description">Importance Low Notification</string>
    <string name="create_min">Create Min Notification</string>
    <string name="channel_min">MIN</string>
    <string name="channel_min_description">Importance Min Notification</string>
    <string name="channel_group_normal">Normal</string>
    <string name="channel_group_importance">Importance</string>
    <string name="channel_style">Style</string>
    <string name="channel_style_description">Style Notification</string>
    <string name="create_picture">Create Big Picture Notification</string>
    <string name="create_text">Create Big Text Notification</string>
    <string name="create_messaging">Create Messaging Notification</string>
    <string name="create_inbox">Create Inbox Notification</string>
    <string name="hint_search">Please enter a search term.</string>
    <string name="recycler_empty">There is no list.</string>
    <string name="paging_network">Network</string>
    <string name="paging_database">Database</string>
    <string name="paging_net_db">Network + Database</string>
    <string name="detail_not_support">Details screen is not supported.</string>
    <string name="save">Save</string>
    <string name="error_internet_connect">Please check your internet connectivity</string>
    <string name="error_unknown">An Unknown Error has occurred.</string>
    <string name="product_information">Product Information</string>
    <string name="history">History</string>
    <string name="confirm">Confirm</string>
    <string name="designation">Designation</string>
    <string name="lifespan">Lifespan</string>
    <string name="animal_taste">Taste</string>
    <string name="herbivores">Herbivores</string>
    <string name="carnivores">Carnivores</string>
    <string name="omnivores">Omnivores</string>
    <string name="summary">Summary</string>
    <string name="activity_intent">Activity with Intent</string>
    <string name="fragment_argument">Fragment with Argument</string>
    <string name="fragment_safe_args">Fragment with Safe Args</string>
    <string name="livedata_extract">LiveData Extract</string>
    <string name="livedata_object">LiveData Object</string>
    <string name="author">Author</string>
    <string name="translator">Translator</string>
    <string name="public_date">Public Date</string>
    <string name="publisher">Publisher</string>
    <string name="price">Price</string>
    <string name="book_introduction">Introduction</string>
    <string name="bottom_navigation_activity">Start Activity</string>
    <string name="bottom_navigation_Fragment">Start Fragment</string>
    <string name="count">Count</string>
    <string name="refresh_always">Refresh Always</string>
    <string name="refresh_di">Dependecy Injection</string>
    <string name="refresh_enum">Enum</string>
    <string name="refresh_one">One</string>
    <string name="refresh_two">Two</string>
    <string name="refresh_three">Three</string>
    <string name="refresh_four">Four</string>
    <string name="memory_stay">Stay Memory</string>
    <string name="memory_clear">Clear Memory</string>
</resources>
