<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.github.jhamin0511.mystudy.ui.refresh.RefreshViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/refresh_four"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REFRESH"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:bindVisible="@{vm.bindLoading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_refreshed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REFRESHED"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:bindVisible="@{!vm.bindLoading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:bindVisible="@{vm.bindLoading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/bt_refresh_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginEnd="@dimen/space_large"
            android:layout_marginBottom="@dimen/space_xlarge"
            android:onClick="@{() -> vm.bindClickRefreshOne()}"
            android:text="@string/refresh_one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_refresh_two"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_refresh_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_large"
            android:onClick="@{() -> vm.bindClickRefreshTwo()}"
            android:text="@string/refresh_two"
            app:layout_constraintBottom_toBottomOf="@id/bt_refresh_one"
            app:layout_constraintEnd_toStartOf="@id/bt_refresh_three"
            app:layout_constraintStart_toEndOf="@id/bt_refresh_one"
            app:layout_constraintTop_toTopOf="@id/bt_refresh_one" />

        <Button
            android:id="@+id/bt_refresh_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_large"
            android:onClick="@{() -> vm.bindClickRefreshThree()}"
            android:text="@string/refresh_three"
            app:layout_constraintBottom_toBottomOf="@id/bt_refresh_two"
            app:layout_constraintEnd_toStartOf="@id/bt_refresh_four"
            app:layout_constraintStart_toEndOf="@id/bt_refresh_two"
            app:layout_constraintTop_toTopOf="@id/bt_refresh_two" />

        <Button
            android:id="@+id/bt_refresh_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_medium"
            android:onClick="@{() -> vm.bindClickRefreshFour()}"
            android:text="@string/refresh_four"
            app:layout_constraintBottom_toBottomOf="@id/bt_refresh_three"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bt_refresh_three"
            app:layout_constraintTop_toTopOf="@id/bt_refresh_three" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
