<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.github.jhamin0511.mystudy.ui.paging.animal.AnimalItem" />
    </data>

    <androidx.cardview.widget.CardView
        style="@style/CardItemHolder"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_xsmall"
        android:layout_marginTop="@dimen/space_xsmall"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/ItemHolder"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/space_small"
            android:paddingEnd="@dimen/space_medium"
            android:paddingStart="@dimen/space_medium"
            android:paddingTop="@dimen/space_small">

            <TextView
                android:background="@drawable/bg_animal_face"
                android:id="@+id/tv_emoji"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@{item.emoji}"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="\uD83D\uDC35" />

            <TextView
                style="@style/TextView.Item.Title"
                android:id="@+id/tv_name_title"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_width="0dp"
                android:text="@string/designation"
                app:layout_constraintEnd_toStartOf="@id/tv_lifespan_title"
                app:layout_constraintStart_toEndOf="@id/tv_emoji"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextView.Item.Content"
                android:id="@+id/tv_name"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_smaller"
                android:layout_width="0dp"
                android:text="@{item.designation}"
                app:layout_constraintEnd_toEndOf="@id/tv_name_title"
                app:layout_constraintStart_toStartOf="@id/tv_name_title"
                app:layout_constraintTop_toBottomOf="@id/tv_name_title"
                tools:text="원숭이(Monkey)" />

            <TextView
                style="@style/TextView.Item.Title"
                android:id="@+id/tv_lifespan_title"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_width="@dimen/width_large"
                android:text="@string/lifespan"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_name_title"
                app:layout_constraintEnd_toStartOf="@id/tv_taste_title"
                app:layout_constraintStart_toEndOf="@id/tv_name_title" />

            <TextView
                style="@style/TextView.Item.Content"
                android:id="@+id/tv_lifespan"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_smaller"
                android:layout_width="0dp"
                android:text="@{item.lifespan}"
                app:layout_constraintEnd_toEndOf="@id/tv_lifespan_title"
                app:layout_constraintStart_toStartOf="@id/tv_lifespan_title"
                app:layout_constraintTop_toBottomOf="@id/tv_lifespan_title"
                tools:text="15~45년" />

            <TextView
                style="@style/TextView.Item.Title"
                android:id="@+id/tv_taste_title"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_width="@dimen/width_large"
                android:text="@string/animal_taste"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_lifespan_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_lifespan_title" />

            <TextView
                style="@style/TextView.Item.Content"
                android:id="@+id/tv_taste"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_smaller"
                android:layout_width="0dp"
                android:text="@{item.taste.value}"
                app:layout_constraintEnd_toEndOf="@id/tv_taste_title"
                app:layout_constraintStart_toStartOf="@id/tv_taste_title"
                app:layout_constraintTop_toBottomOf="@id/tv_taste_title"
                tools:text="@string/omnivores" />

            <TextView
                style="@style/TextView.Item.Title"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:layout_width="match_parent"
                android:text="@{item.summary}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_emoji"
                tools:text="원숭이 또는 잔나비는 영장류에 속하는 동물의 총칭이다. 원숭이하목은 크게 신세계원숭이, 구세계원숭이, 유인원으로 나뉜다. 신세계원숭이는 광비원소목을 이루지만, 구세계원숭이는 협비원소목의 한 상과에 그친다." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
