<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.github.jhamin0511.mystudy.ui.livedata.LivedataExtractViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="@dimen/space_large">

            <ImageView
                android:id="@+id/iv_book"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:bindImage="@{vm.bindImage}"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/img_kotlin_in_action" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_xsmall"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/iv_book" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/space_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/space_medium" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextView.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:text="@{vm.bindName}"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/iv_book"
                tools:text="Kotlin in Action" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextView.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xsmall"
                android:text="@{vm.bindTitle}"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:text="코틀린 컴파일러 개발자가 직접 알려주는 코틀린 언어 핵심" />

            <TextView
                android:id="@+id/tv_author_title"
                style="@style/TextView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xsmall"
                android:text="@string/author"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_author"
                style="@style/TextView.Item.Content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:text="@{vm.bindAuthor}"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/tv_author_title"
                app:layout_constraintTop_toTopOf="@id/tv_author_title"
                tools:text="드미트리 제메로프, 스베트라나 이사코바" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_author_title, tv_author" />

            <TextView
                android:id="@+id/tv_translator_title"
                style="@style/TextView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xsmall"
                android:text="@string/translator"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/barrier_author" />

            <TextView
                android:id="@+id/tv_translator"
                style="@style/TextView.Item.Content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:text="@{vm.bindTranslator}"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/tv_translator_title"
                app:layout_constraintTop_toTopOf="@id/tv_translator_title"
                tools:text="오현석" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_translator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_translator_title, tv_translator" />

            <TextView
                android:id="@+id/tv_publisher_title"
                style="@style/TextView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xsmall"
                android:text="@string/publisher"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/barrier_translator" />

            <TextView
                android:id="@+id/tv_publisher"
                style="@style/TextView.Item.Content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:text="@{vm.bindPublisher}"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/tv_publisher_title"
                app:layout_constraintTop_toTopOf="@id/tv_publisher_title"
                tools:text="에이콘출판사" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_publisher_title, tv_publisher" />

            <TextView
                android:id="@+id/tv_introduce_title"
                style="@style/TextView.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:text="@string/book_introduction"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/barrier_publisher" />

            <EditText
                android:id="@+id/tv_introduce"
                style="@style/TextView.Content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xsmall"
                android:background="@null"
                android:text="@={vm.bindIntroduce}"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/tv_introduce_title"
                tools:text="코틀린이 안드로이드 공식 언어가 되면서 관심이 커졌다. 이 책은 코틀린 언어를 개발한 젯브레인의 코틀린 컴파일러 개발자들이 직접 쓴 일종의 공식 서적이라 할 수 있다. 코틀린 언어의 가장 큰 특징이라면 실용성을 들 수 있을 것이다. 이 책에서도 실용성을 강조하는 입장에서 쓰였다. 코틀린 기초를 소개하고, 고차함수, 객체지향, 제네릭스 등의 내용을 설명한다. 그리고 코틀린이 자바 언어를 어떻게 개선했고 기존 자바 프로젝트에서 코틀린을 함께 사용할 때 어떤 부분을 조심해야 할지를 중심으로 코틀린 언어를 설명한다. 후반에는 애노테이션과 리플렉션, DSL에 대해 실제 라이브러리 예제를 다루면서 설계 기법과 구현기법을 자세히 설명한다. 특히 이 주제는 이 책의 백미로, 다른 코틀린 책이나 공식 문서에서는 찾아보기 힘들며 실전에서 크게 도움이 받을 수 있다. 한국어판 부록에서는 코틀린 버전 1.3.3까지의 변화를 정리한 내용과 코루틴, 코틀린/JS에 대한 간단한 소개를 덧붙였다." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
